--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,20 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 body{
 	background: #2ecc71;
-	padding: 30px;
+	padding: 36px;
+	font-family: 'Open Sans', sans-serif;
 }
 
 input[type="text"]:focus {
   outline: none;
 }
 .statusInput input[type="text"] {
-  	font-size: 24px;
+  	font-size: 36px;
     background: transparent;
     border: none;
-    width: 100%
+    width: 100%;
+    color: white;
 }
 .statusInput input[type="text"]:focus,
 .statusInput input[type="text"].focus {
