--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,11 @@ input[type="text"]:focus {
 .statusInput input[type="text"] {
   	font-size: 36px;
     background: transparent;
-    border: none;
+    border: none !important;
     width: 100%;
     color: white;
+    box-shadow: none !important;
+    height: 4rem !important;
 }
 .statusInput input[type="text"]:focus,
 .statusInput input[type="text"].focus {
@@ -37,6 +39,6 @@ input[type="text"]:focus {
     opacity: 0.6;
 }
 
-.statusInput h1{
+.statusInput h2{
 	color: white;
 }
